--- a/pathvisualizer/src/Pathfinder/node/node.css
+++ b/pathvisualizer/src/Pathfinder/node/node.css
@@ -6,13 +6,14 @@
   }
   
   .node-finish {
+    
     background-color: red;
   }
   
   .node-start {
     background-color: green;
   }
-  
+  /*
   .node-visited {
     animation-name: visitedAnimation;
     animation-duration: 1.5s;
@@ -76,4 +77,4 @@
       transform: scale(1);
       background-color: rgb(255, 254, 106);
     }
-  }
+  }*/
