reload on clear

--- a/pathvisualizer/src/Pathfinder/node/node.css
+++ b/pathvisualizer/src/Pathfinder/node/node.css
@@ -51,6 +51,9 @@
     background-color: rgb(12, 53, 71);
   }
   
+  .node-unvisit{
+    background-color:white;
+  }
   .node-shortest-path {
     animation-name: shortestPath;
     animation-duration: 1.5s;
