--- a/pathvisualizer/src/Pathfinder/node/node.css
+++ b/pathvisualizer/src/Pathfinder/node/node.css
@@ -1,7 +1,7 @@
 .node {
     width: 25px;
     height: 25px;
-    outline: 1px solid rgb(175, 216, 248);
+    outline: 0.5px solid rgb(175, 216, 248);
     display: inline-block;
   }
   
@@ -48,9 +48,33 @@
   }
   
   .node-wall {
-    background-color: rgb(12, 53, 71);
+    
+    animation-name: nodeWallAnimation;
+    animation-duration: 0.3s;
+    animation-timing-function:ease-in;
+    animation-delay: 0;
+    animation-direction: alternate;
+    animation-iteration-count: 1;
+    animation-fill-mode: forwards;
+    animation-play-state: running;
   }
   
+  @keyframes nodeWallAnimation{
+    
+    
+    50% {
+      transform: scale(1.2);
+      /*background-color: rgba(0, 217, 159, 0.75);*/
+      background-color: rgb(12, 53, 71);
+    }
+  
+    100% {
+      transform: scale(1);
+     /* background-color: rgba(0, 190, 218, 0.75);*/
+      background-color: rgb(12, 53, 71);
+    }
+  }
+
   .node-unvisit{
     background-color:white;
   }
